- Modify FX.php for FileMaker Server to enable the "fmalt" and retrieve the record id on portal objects.
- Modify FX.php for FileMaker Server to disable the surrogate input patch when using FileMaker Server 12
  (by specifying $dbDataType = 'FMPro12' in params.php).
- Check availability of BC Math functions of PHP. INTER-Mediator requires BC Math for authentication.
- [SECURITY FIX] Database connection information (the 'password' key etc.) in a definition file doesn't send to clients.
- [SECURITY FIX] Fix SQL injection issue when using PDO.
- [INFO] INTER-Mediator requires FileMaker Server 10 or later, OS X v10.6 or later if using FileMaker Server.
- [BUG FIX] Fix DataConverter_FMDateTime and DataConverter_MySQLDateTime's issue on Windows.
- [BUG FIX] The substr function in IE8 can't handle a negative parameter, fix it on the numberFormat method.

Ver.3.9 (2013/9/28)
- The definition file editor works reading/writing. You can call it at the start of logs on debug mode.
- Customize the login panel by CSS definitions.
- The title of the login panel can be set to property as like "INTERMediatorOnPage.authPanelTitle = "title";".
- Update FX.php to fix compatibility with FileMaker Server 12.
- Enable omitting to place the primary key field object on a layout when using FileMaker Server
  (by specifying 'key' => '-recid').
- MediaAccess can choose inline or attachment.
- [BUG FIX] Fix display unnecessary insert button and delete button on the navigation bar after pressing an "enter" key
            in the text box of the moving page control on the navigation bar (WebKit browsers only).
- [BUG FIX] Authentication and Authorization for groups.
- [BUG FIX] FileMaker_FX class isolates the FX object to data and auth.
- [BUG FIX] File uploader didn't respond on the message and progress.
- [BUG FIX] The field for radio buttons reports "Anyone changed this field" message.

Ver.3.8 (2013/8/22)
- The official INTER-Mediator site is http://inter-mediator.org/.