@@ -60,7 +60,7 @@ class MessageStrings
         1019 => "On calling db_delete, Requred parameter 'name' doesn't specified",
         1020 => "On calling db_delete, Requred parameter 'conditions' doesn't specified",
         1021 => "On calling db_createRecord, Requred parameter 'name' doesn't specified",
-        1022 => 'Using Unsupported Browser',
+        1022 => 'Using Unsupported Browser (Try not to use the compatibility mode of Internet Explorer)',
         1023 => '[This site uses INTER-Mediator.]',
         1024 => 'Multiple records are going to be updated. The key field might be wrong. Are you sure?',
         1025 => 'Are you sure to delete?',
